# speech-text-alignment

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  NOTES.md  README.md  TODO  TODO.md  align.py  align.sh  devcontainer.json  pyproject.toml  requirements.txt
docs/: TODO.md  benchmarks.md  decompression.md  mls_data_interrogation.md  mls_data_preparation.md  mls_eda.md
plans/: Plan.md  codebase-health-fixes.md
prompt_templates/: basic.jinja  capital_of_france_space_text_modality_token.jinja  capital_of_france_text_modality_token.jinja  raven_poe.jinja  repeat_this_modality_switch.jinja
sardalign/: README.md  _interleave_deprecated.py  align.py  align_and_segment.py  align_utils.py  config.py  constants.py  dump_hubert_feature.py  dump_km_label.py  feature_utils.py  interleave.py  learn_kmeans.py  norm_config.py  segment_tokens.py  text_normalization.py  utils.py  vocab_extension.py
scripts/: README.md  align_and_hubert_encode.py  align_and_segment.py  convert_jsonl_parquet.py  docker_build.sh  download_hf_tinyllama.py  drop_jsonl_cols.py  dump_hubert_feature.py  dump_hubert_features.sh  extend_tinyllama_dsus.py  extend_tinyllama_sentencepiece_dsus.py  generate_interleaved_data.py  generate_interleaved_dataset.py  interleave.py  interleave.sh  ljspeech_csv_to_jsonl.py  render_via_prompt.py  resample_audio_files_ffmpeg_parallel.sh  segment_tokens.py  segment_tokens.sh  shard_filelist_lines.py  test_align_and_segment.sh  upload_hf_dataset.py  uromanization_mp.py  uromanize.py
snippets/: README.md  check_files_exist.sh  faiss_kmeans.py  (+6 more)
(+86 files in other folders)
